Mobile xs responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
 
         <nav class="masthead navbar navbar-toggleable-md">
-            <a class="navbar-brand" href="#"></a>
+            <a class="logo navbar-brand" href="#"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars mobile-nav"></span>
             </button>
@@ -40,6 +40,7 @@
             <div class="container h-100 d-flex justify-content-center align-items-center">
                 <div class="overlay"></div>
                 <div class="content text-center">
+                    <div class="logo"></div>
                     <h1 class="title">Affinity</h1>
                     <p class="lead">Innovate - Results - Change the game</p>
                 </div>
@@ -47,106 +48,102 @@
             </div>
         </header>
 
-        <div class="feature feature1">
+        <section class="feature feature1">
             <div class="container">
                 <div class="content">
                     <h2 class="title">Build Your Brand.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipi
-                    elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna Duis aute 
-                    irure dolor in reprehenderit it.
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
+                    ullamco laboris nisi ut aliquip.
                     </p>
                     <button class="btn btn-default">Read More</button>
                 </div>
             </div>
-        </div>
+        </section>
 
         <hr>
 
-        <div class="gallery">
+        <section class="gallery">
             <h2 class="title text-center">Our Work</h2>
             <div class="container">
                 <div class="row">
 
                     <div class="image-wrap col-12">
                         <div class="image">
-                            <img src="assets/images/startup-593304.jpg" alt="">
+                            <img src="dist/img/tilger.jpg" alt="">
                         </div>
                     </div>
                     
                     <div class="image-wrap col-12">
                         <div class="image">
-                            <img src="assets/images/startup-593304.jpg" alt="">
+                            <img src="dist/img/james-schreiner.jpg" alt="">
                         </div>
                     </div>
 
                     <div class="image-wrap col-12">
                         <div class="image">
-                            <img src="assets/images/startup-593304.jpg" alt="">
+                            <img src="dist/img/tilger.jpg" alt="">
                         </div>
                     </div>
 
                     <div class="image-wrap col-12">
                         <div class="image">
-                            <img src="assets/images/startup-593304.jpg" alt="">
+                            <img src="dist/img/james-schreiner.jpg" alt="">
                         </div>
                     </div>
                     
                 </div>
             </div>
-        </div>
+        </section>
 
         <hr>
 
-        <div class="feature feature2">
+        <section class="feature feature2">
             <div class="container">
                 <div class="content">
                     <h2 class="title">Increase Your Traffic.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipi
-                    elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna Duis aute 
-                    irure dolor in reprehenderit it.
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
+                    ullamco laboris nisi ut aliquip.
                     </p>
                     <button class="btn btn-default">Our Services</button>
                 </div>
             </div>
-        </div>
+        </section>
 
         <hr>
 
-        <div class="feature feature3">
+        <section class="feature feature3">
             <div class="container">
                 <div class="content">
                     <h2 class="title">Boost Your Sales.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipi
-                    elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna Duis aute 
-                    irure dolor in reprehenderit it.
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
+                    ullamco laboris nisi ut aliquip.
                     </p>
                     <button class="btn btn-default">Our Process</button>
                 </div>
             </div>
-        </div>
+        </section>
 
         <hr>
 
-        <div class="feature feature4">
+        <section class="feature feature4">
             <div class="container">
                 <div class="content">
                     <h2 class="title">Free Website Analysis.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipi
-                    elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna Duis aute 
-                    irure dolor in reprehenderit it.
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
+                    ullamco laboris nisi ut aliquip.
                     </p>
                     <button class="btn btn-default">Get Started</button>
                 </div>
             </div>
-        </div>
+        </section>
 
         <hr>
 
-        <div class="contact">
+        <section class="contact">
             <div class="container">
                 <div class="content">
                     <h2 class="title">How Can We Help You?</h2>
@@ -179,7 +176,7 @@
                 </form>
                 <p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p>
             </div>
-        </div>
+        </section>
 
         <footer class="mastfoot">
             <div class="container">
@@ -200,7 +197,7 @@
                         <span class="fa fa-medium"></span>
                     </li>
                 </ul>
-                <h4 class="disclaimer text-center"><span class="fa fa-copyright"><span> 2017 - All rights reserved</h4>
+                <h4 class="disclaimer text-center"><span class="fa fa-copyright"></span> 2017 - All rights reserved</h4>
             </div>
         </footer>
 
