--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
     </head>
     <body>
 
-        <nav class="masthead navbar navbar-toggleable-md">
+        <nav class="masthead navbar navbar-expand-lg">
             <a class="logo navbar-brand" href="#"></a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="fa fa-bars mobile-nav"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fa fa-bars"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item"> 
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Our Process</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">Contact</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -44,7 +50,8 @@
                     <h1 class="title">Affinity</h1>
                     <p class="lead">Innovate - Results - Change the game</p>
                 </div>
-                <p class="disclaimer">(801) 877-1802</p>
+                <p class="email">info@affinity.com</p>
+                <p class="phone">(801) 877-1802</p>
             </div>
         </header>
 
@@ -64,29 +71,29 @@
         <hr>
 
         <section class="gallery">
-            <h2 class="title text-center">Our Work</h2>
+            <h2 class="title text-center">Our Clients</h2>
             <div class="container">
                 <div class="row">
 
-                    <div class="image-wrap col-12">
+                    <div class="image-wrap col-12 col-lg-6">
                         <div class="image">
                             <img src="dist/img/tilger.jpg" alt="">
                         </div>
                     </div>
                     
-                    <div class="image-wrap col-12">
+                    <div class="image-wrap col-12 col-lg-6">
                         <div class="image">
                             <img src="dist/img/james-schreiner.jpg" alt="">
                         </div>
                     </div>
 
-                    <div class="image-wrap col-12">
+                    <div class="image-wrap col-12 col-lg-6">
                         <div class="image">
                             <img src="dist/img/tilger.jpg" alt="">
                         </div>
                     </div>
 
-                    <div class="image-wrap col-12">
+                    <div class="image-wrap col-12 col-lg-6">
                         <div class="image">
                             <img src="dist/img/james-schreiner.jpg" alt="">
                         </div>
