--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <p class="lead">Fill out the form below for a free consoltation</p>
                 </div>
 
-                <form>
+                <form action="https://formspree.io/zjmitche@outlook.com" method="POST">
                     <div class="container">
                         <div class="form-group">
                             <label>Business Name</label>
@@ -177,8 +177,9 @@
                         </div>
                         <div class="form-group">
                             <label>Message</label>
-                            <textarea class="col-12" rows="5" cols="50"></textarea>
+                            <textarea name="message" class="col-12" rows="5" cols="50"></textarea>
                         </div>
+                        <input type="submit" value="Send">
                     </div>
                 </form>
                 <p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p>
