--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
@@ -36,7 +36,7 @@
                         <a class="nav-link " href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Contact</a>
+                        <a class="nav-link last-nav" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -55,13 +55,33 @@
             </div>
         </header>
 
+        <section class="social-fixed">
+            <ul class="social-icons">
+                <li class="icon facebook">
+                    <span class="fa fa-facebook"></span>
+                </li>
+                <li class="icon twitter">
+                    <span class="fa fa-twitter"></span>
+                </li>
+                <li class="icon google-plus">
+                    <span class="fa fa-google-plus"></span>
+                </li>
+                <li class="icon linkedin">
+                    <span class="fa fa-linkedin"></span>
+                </li>
+                <li class="icon instagram">
+                    <span class="fa fa-instagram"></span>
+                </li>
+            </ul>
+        </section>
+
         <section class="feature feature1">
             <div class="container">
                 <div class="content">
                     <h2 class="title">Build Your Brand.</h2>
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip.
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
                     </p>
                     <button class="btn btn-default">Read More</button>
                 </div>
@@ -111,7 +131,7 @@
                     <h2 class="title">Increase Your Traffic.</h2>
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip.
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
                     </p>
                     <button class="btn btn-default">Our Services</button>
                 </div>
@@ -126,7 +146,7 @@
                     <h2 class="title">Boost Your Sales.</h2>
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip.
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
                     </p>
                     <button class="btn btn-default">Our Process</button>
                 </div>
@@ -141,7 +161,7 @@
                     <h2 class="title">Free Website Analysis.</h2>
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip.
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
                     </p>
                     <button class="btn btn-default">Get Started</button>
                 </div>
@@ -179,7 +199,7 @@
                             <label>Message</label>
                             <textarea name="message" class="col-12" rows="5" cols="50"></textarea>
                         </div>
-                        <input type="submit" value="Send">
+                        <button class="btn btn-default">Submit</button
                     </div>
                 </form>
                 <p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p>
