--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         </nav>
 
         <header class="showcase">
+            <video autoplay loop class="fillWidth">
+                <source src="assets/video/Busy-People.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+            </video>
             <div class="container h-100 d-flex justify-content-center align-items-center">
                 <div class="overlay"></div>
                 <div class="content text-center">
@@ -52,6 +55,9 @@
                 </div>
                 <p class="email">info@affinity.com</p>
                 <p class="phone">(801) 877-1802</p>
+                <div class="arrow-icon">
+                    <span class="fa fa-angle-down"></span>
+                </div>
             </div>
         </header>
 
