--- a/index.html
+++ b/index.html
@@ -61,38 +61,80 @@
 
         <section class="social-fixed">
             <ul class="social-icons">
-                <li class="icon facebook">
+                <a href="https://www.facebook.com/AMSlocal/"><li class="icon facebook">
                     <span class="fa fa-facebook"></span>
-                </li>
-                <li class="icon twitter">
+                </li></a>
+                <a href="https://twitter.com/AMSlocal/"><li class="icon twitter">
                     <span class="fa fa-twitter"></span>
-                </li>
-                <li class="icon google-plus">
+                </li></a>
+                <a href="https://plus.google.com/b/103448407820675609351/103448407820675609351/"><li class="icon google-plus">
                     <span class="fa fa-google-plus"></span>
-                </li>
-                <li class="icon linkedin">
+                </li></a>
+                <a href="https://www.linkedin.com/company-beta/18039051/"><li class="icon linkedin">
                     <span class="fa fa-linkedin"></span>
-                </li>
-                <li class="icon instagram">
+                </li></a>
+                <a href="https://www.instagram.com/affinity_ams/"><li class="icon instagram">
                     <span class="fa fa-instagram"></span>
-                </li>
+                </li></a>
             </ul>
         </section>
 
         <section class="feature feature1">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Build Your Brand.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
-                    </p>
+                    <h2 class="title">Google is constantly changing. You need a company that changes & adapts for you.</h2>
+                    <ul class="pitch">
+                        <li class="bullet">Google has over 200 ingredients that play a factor in how you are ranking online.</li><br>
+                        <li class="bullet">Google changes their algorithm on average one to two times per year.</li><br>
+                        <li class="bullet">We will update your website every time Google changes so you aren’t left in the dust.</li>
+                    </ul>
                     <button class="btn btn-default">Read More</button>
                 </div>
             </div>
         </section>
 
         <hr>
+
+        <section class="feature feature2">
+            <div class="container">
+                <div class="content">
+                    <h2 class="title">Don’t fall behind. Stay updated. Always!</h2>
+                    <ul class="pitch">
+                        <li class="bullet">The problem you experience with other “Companies” is they don’t consistently update you. <strong>We do.</strong></li><br>
+                        <li class="bullet">Always stay up to date with a custom tailored experience.</li>
+                    </ul>
+                    <button class="btn btn-default">Our Services</button>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="feature feature3">
+            <div class="container">
+                <div class="content">
+                    <h2 class="title">Experts in every and all categories to create the ultimate experience.</h2>
+                    <ul class="pitch">
+                        <li class="bullet">Teams of specialized experts in every department tailored for you.</li><br>
+                        <li class="bullet">We designed full teams of experts so you know it's done the right way.</li><br>
+                        <li class="bullet">Everything we do is custom to what you want.</li>
+                    </ul>
+                    <button class="btn btn-default">Our Process</button>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="feature feature4">
+            <div class="container">
+                <div class="content">
+                    <h2 class="title">See what the hype is all about.</h2>
+                    <p class="lead">Take 15-minutes to get a full breakdown of where Google is flagging you.</p>
+                    <button class="btn btn-default">Get Started</button>
+                </div>
+            </div>
+        </section>
 
         <section class="gallery">
             <h2 class="title text-center">Our Clients</h2>
@@ -129,51 +171,6 @@
 
         <hr>
 
-        <section class="feature feature2">
-            <div class="container">
-                <div class="content">
-                    <h2 class="title">Increase Your Traffic.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
-                    </p>
-                    <button class="btn btn-default">Our Services</button>
-                </div>
-            </div>
-        </section>
-
-        <hr>
-
-        <section class="feature feature3">
-            <div class="container">
-                <div class="content">
-                    <h2 class="title">Boost Your Sales.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
-                    </p>
-                    <button class="btn btn-default">Our Process</button>
-                </div>
-            </div>
-        </section>
-
-        <hr>
-
-        <section class="feature feature4">
-            <div class="container">
-                <div class="content">
-                    <h2 class="title">Free Website Analysis.</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure.
-                    </p>
-                    <button class="btn btn-default">Get Started</button>
-                </div>
-            </div>
-        </section>
-
-        <hr>
-
         <section class="contact">
             <div class="container">
                 <div class="content">
@@ -181,7 +178,7 @@
                     <p class="lead">Fill out the form below for a free consoltation</p>
                 </div>
 
-                <form action="https://formspree.io/zjmitche@outlook.com" method="POST">
+                <form action="https://formspree.io/info@amslocal.com" method="POST">
                     <div class="container">
                         <div class="form-group">
                             <label>Business Name</label>
@@ -214,19 +211,19 @@
             <div class="container">
                 <ul class="social-icons">
                     <li class="icon">
-                        <span class="fa fa-instagram"></span>
+                        <a href="https://www.instagram.com/affinity_ams/"><span class="fa fa-instagram"></span></a>
                     </li>
                     <li class="icon">
-                        <span class="fa fa-twitter"></span>
+                        <a href="https://twitter.com/AMSlocal/"><span class="fa fa-twitter"></span></a>
                     </li>
                     <li class="icon">
-                        <span class="fa fa-linkedin"></span>
+                        <a href="https://www.linkedin.com/company-beta/18039051/"><span class="fa fa-linkedin"></span></a>
                     </li>
                     <li class="icon">
-                        <span class="fa fa-facebook"></span>
+                        <a href="https://www.facebook.com/AMSlocal/"><span class="fa fa-facebook"></span></a>
                     </li>
                     <li class="icon">
-                        <span class="fa fa-medium"></span>
+                        <a href="https://medium.com/@AMSlocal"><span class="fa fa-medium"></span></a>
                     </li>
                 </ul>
                 <h4 class="disclaimer text-center"><span class="fa fa-copyright"></span> 2017 - All rights reserved</h4>
