Colorful template desktop

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <link rel="icon" type="image/png" sizes="32x32" href="dist/img/favicon.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link href="dist/css/style.min.css" rel="stylesheet">
     </head>
@@ -23,20 +23,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item nav-item1">
                         <a class="nav-link" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-item2">
                         <a class="nav-link" href="#">Our Process</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                    <li class="nav-item nav-item3">
+                        <a class="nav-link" href="#">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Services</a>
+                    <li class="nav-item nav-item4">
+                        <a class="nav-link " href="#">Contact</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link last-nav" href="#">Contact</a>
+                    <li class="nav-item nav-item5">
+                        <a class="nav-link last-nav" href="https://medium.com/@AMSlocal/">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -80,6 +80,7 @@
         </section>
 
         <section class="feature feature1">
+            <div class="overlay"></div>
             <div class="container">
                 <div class="content">
                     <h2 class="title">Google is constantly changing. You need a company that changes & adapts for you.</h2>
@@ -88,29 +89,26 @@
                         <li class="bullet">Google changes their algorithm on average one to two times per year.</li><br>
                         <li class="bullet">We will update your website every time Google changes so you aren’t left in the dust.</li>
                     </ul>
-                    <button class="btn btn-default">Read More</button>
                 </div>
             </div>
         </section>
 
-        <hr>
-
         <section class="feature feature2">
+            <div class="overlay"></div>
             <div class="container">
                 <div class="content">
                     <h2 class="title">Don’t fall behind. Stay updated. Always!</h2>
                     <ul class="pitch">
-                        <li class="bullet">The problem you experience with other “Companies” is they don’t consistently update you. <strong>We do.</strong></li><br>
+                        <li class="bullet">The problem with other “Companies” is they don’t consistently update you. <strong>We do.</strong></li><br>
+                        <li class="bullet">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</li>
                         <li class="bullet">Always stay up to date with a custom tailored experience.</li>
                     </ul>
-                    <button class="btn btn-default">Our Services</button>
                 </div>
             </div>
         </section>
 
-        <hr>
-
         <section class="feature feature3">
+            <div class="overlay"></div>
             <div class="container">
                 <div class="content">
                     <h2 class="title">Experts in every and all categories to create the ultimate experience.</h2>
@@ -119,14 +117,111 @@
                         <li class="bullet">We designed full teams of experts so you know it's done the right way.</li><br>
                         <li class="bullet">Everything we do is custom to what you want.</li>
                     </ul>
-                    <button class="btn btn-default">Our Process</button>
                 </div>
             </div>
         </section>
 
-        <hr>
+        <section class="feature-break">
+            <div class="container">
+                <h2 class="title">We keep it simple.</h2>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </section>
 
-        <section class="feature feature4">
+        <section class="gallery">
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="service-wrap col-md-6">
+                        <div class="service service1">
+                            <div class="overlay"></div>
+                            <div class="content">
+                                <img class="icon1" src="dist/img/affinity-service3.png">
+                                <h2 class="title">Custom Website <br> & Updates</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="service-wrap col-md-6">
+                        <div class="service service2">
+                            <div class="overlay"></div>
+                            <div class="content">
+                                <img src="dist/img/affinity-service2.png">
+                                <h2 class="title">Full Team of Experts in <br> Every Category</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="service-wrap col-md-6">
+                        <div class="service service3">
+                            <div class="overlay"></div>
+                            <div class="content">
+                                <img src="dist/img/affinity-service4.png">
+                                <h2 class="title">Custom Content For <br> You Specifically</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="service-wrap col-md-6">
+                        <div class="service service4">
+                            <div class="overlay"></div>
+                            <div class="content">
+                                <img src="dist/img/affinity-service5.png">
+                                <h2 class="title">Constantly Updating You <br> Every Month</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="service-wrap col-md-6">
+                        <div class="service service5">
+                            <div class="overlay"></div>
+                            <div class="content">
+                                <img src="dist/img/affinity-service1.png">
+                                <h2 class="title">Performance-Based Guarantee - Results Matter</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="service-wrap col-md-6">
+                        <div class="service service6">
+                            <div class="overlay"></div>
+                            <div class="content">
+                                <img src="dist/img/affinity-service6.png">
+                                <h2 class="title">360 Solution For All <br> Online Needs</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="feature-graph">
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div class="content-wrap">
+                            <div class="content">
+                                <h2 class="title">"Marketing 101: Go <br> where the people are."</h2>
+                                <hr>
+                                <p class="author"><span class="icon"></span>AffinityHQ</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="graph-wrap">
+                            <div class="graph"></div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="feature-break2">
             <div class="container">
                 <div class="content">
                     <h2 class="title">See what the hype is all about.</h2>
@@ -136,98 +231,66 @@
             </div>
         </section>
 
-        <section class="gallery">
-            <h2 class="title text-center">Our Clients</h2>
-            <div class="container">
-                <div class="row">
-
-                    <div class="image-wrap col-12 col-lg-6">
-                        <div class="image">
-                            <img src="dist/img/tilger.jpg" alt="">
-                        </div>
-                    </div>
-                    
-                    <div class="image-wrap col-12 col-lg-6">
-                        <div class="image">
-                            <img src="dist/img/james-schreiner.jpg" alt="">
-                        </div>
-                    </div>
-
-                    <div class="image-wrap col-12 col-lg-6">
-                        <div class="image">
-                            <img src="dist/img/tilger.jpg" alt="">
-                        </div>
-                    </div>
-
-                    <div class="image-wrap col-12 col-lg-6">
-                        <div class="image">
-                            <img src="dist/img/james-schreiner.jpg" alt="">
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </section>
-
-        <hr>
-
-        <section class="contact">
-            <div class="container">
-                <div class="content">
-                    <h2 class="title">How Can We Help You?</h2>
-                    <p class="lead">Fill out the form below for a free consoltation</p>
-                </div>
-
-                <form action="https://formspree.io/info@amslocal.com" method="POST">
-                    <div class="container">
-                        <div class="form-group">
-                            <label>Business Name</label>
-                            <input type="text" name="business" class="col-12">
-                        </div>
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input type="text" name="name" class="col-12">
-                        </div>
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" name="phone" class="col-12">
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" name="email" class="col-12">
-                        </div>
-                        <div class="form-group">
-                            <label>Message</label>
-                            <textarea name="message" class="col-12" rows="5" cols="50"></textarea>
-                        </div>
-                        <button class="btn btn-default">Submit</button
-                    </div>
-                </form>
-                <p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p>
-            </div>
-        </section>
-
         <footer class="mastfoot">
+            <div class="overlay"></div>
+            <div class="contact">
+                <div class="container">
+                    <div class="content">
+                        <h2 class="title">How Can We Help You?</h2>
+                        <p class="lead">Fill out the form below for a free consoltation</p>
+                    </div>
+
+                    <form action="https://formspree.io/info@amslocal.com" method="POST">
+                        <div class="container">
+                            <div class="form-group">
+                                <label>Business Name</label>
+                                <input type="text" name="business" class="col-12">
+                            </div>
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input type="text" name="name" class="col-12">
+                            </div>
+                            <div class="form-group">
+                                <label>Phone</label>
+                                <input type="text" name="phone" class="col-12">
+                            </div>
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="text" name="email" class="col-12">
+                            </div>
+                            <div class="form-group">
+                                <label>Message</label>
+                                <textarea name="message" class="col-12" rows="5" cols="50"></textarea>
+                            </div>
+                            <button class="btn btn-default">Submit</button>
+                        </div>
+                    </form>
+
+                    <p class="disclaimer">Have questions?<br>Call us today! (801) 877-1802</p>
+                </div>
+            </div>
+
             <div class="container">
                 <ul class="social-icons">
                     <li class="icon">
-                        <a href="https://www.instagram.com/affinity_ams/"><span class="fa fa-instagram"></span></a>
+                        <a href="https://www.facebook.com/AMSlocal/"><span class="fa fa-facebook"></span></a>
                     </li>
                     <li class="icon">
                         <a href="https://twitter.com/AMSlocal/"><span class="fa fa-twitter"></span></a>
                     </li>
                     <li class="icon">
+                        <a href="https://plus.google.com/b/103448407820675609351/103448407820675609351/"><span class="fa fa-google-plus"></span></a>
+                    </li>
+                    <li class="icon">
                         <a href="https://www.linkedin.com/company-beta/18039051/"><span class="fa fa-linkedin"></span></a>
                     </li>
                     <li class="icon">
-                        <a href="https://www.facebook.com/AMSlocal/"><span class="fa fa-facebook"></span></a>
-                    </li>
-                    <li class="icon">
-                        <a href="https://medium.com/@AMSlocal"><span class="fa fa-medium"></span></a>
+                        <a href="https://www.instagram.com/affinity_ams/"><span class="fa fa-instagram"></span></a>
                     </li>
                 </ul>
                 <h4 class="disclaimer text-center"><span class="fa fa-copyright"></span> 2017 - All rights reserved</h4>
             </div>
+
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
