full width mobile layout

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Affinity Digital Marketing Agency</title>
+        <title>AffinityHQ</title>
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Utah's top digital marketing agency">
         <meta name="author" content="Affinity Digital Marketing Agency">
 
-        <link rel="icon" type="image/png" sizes="32x32" href="dist/img/favicon.png">
+        <link rel="preload" href="dist/css/style.min.css" as="style">
+        <link rel="icon" type="image/png" sizes="32x32" href="dist/img/affinity-letter.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700," rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link href="dist/css/style.min.css" rel="stylesheet">
     </head>
@@ -27,7 +28,7 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item nav-item2">
-                        <a class="nav-link" href="#">Our Process</a>
+                        <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item nav-item3">
                         <a class="nav-link" href="#">Services</a>
@@ -51,7 +52,7 @@
                 <div class="content text-center">
                     <div class="logo"></div>
                 </div>
-                <p class="email">info@affinity.com</p>
+                <p class="email">info@amslocal.com</p>
                 <p class="phone">(801) 877-1802</p>
                 <div class="arrow-icon">
                     <span class="fa fa-angle-down"></span>
@@ -79,6 +80,19 @@
             </ul>
         </section>
 
+        <section class="mission">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="content">
+                    <h2 class="title">We keep it simple.</h2>
+                    <p class="lead">We want to change the way companies interact with their audience, employees & clients. 
+                    No matter how big we get, we are always guided by these core values.</p>
+                    <hr>
+                    <h4 class="author"><span class="icon"></span>AffinityHQ</h4>
+                </div>
+            </div>
+        </section>
+
         <section class="feature feature1">
             <div class="overlay"></div>
             <div class="container">
@@ -100,8 +114,8 @@
                     <h2 class="title">Don’t fall behind. Stay updated. Always!</h2>
                     <ul class="pitch">
                         <li class="bullet">The problem with other “Companies” is they don’t consistently update you. <strong>We do.</strong></li><br>
-                        <li class="bullet">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</li>
                         <li class="bullet">Always stay up to date with a custom tailored experience.</li>
+                        <li class="bullet">Revisions whenever you want them, whenever you need them.</li>
                     </ul>
                 </div>
             </div>
@@ -122,10 +136,13 @@
         </section>
 
         <section class="feature-break">
+            <div class="overlay"></div>
             <div class="container">
-                <h2 class="title">We keep it simple.</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="content">
+                    <h2 class="title">"If your business is not on the internet, then your business will be out of business."</h2>
+                    <hr>
+                    <h4 class="author">- Bill Gates</h4>
+                </div>
             </div>
         </section>
 
@@ -133,7 +150,7 @@
             <div class="container-fluid">
                 <div class="row">
 
-                    <div class="service-wrap col-md-6">
+                    <div class="service-wrap col-lg-6 order-lg-1">
                         <div class="service service1">
                             <div class="overlay"></div>
                             <div class="content">
@@ -143,7 +160,7 @@
                         </div>
                     </div>
 
-                    <div class="service-wrap col-md-6">
+                    <div class="service-wrap col-lg-6 order-lg-2">
                         <div class="service service2">
                             <div class="overlay"></div>
                             <div class="content">
@@ -153,7 +170,7 @@
                         </div>
                     </div>
 
-                    <div class="service-wrap col-md-6">
+                    <div class="service-wrap col-lg-6 order-4 order-lg-3">
                         <div class="service service3">
                             <div class="overlay"></div>
                             <div class="content">
@@ -163,27 +180,27 @@
                         </div>
                     </div>
 
-                    <div class="service-wrap col-md-6">
+                    <div class="service-wrap col-lg-6 order-3 order-lg-4">
                         <div class="service service4">
                             <div class="overlay"></div>
                             <div class="content">
                                 <img src="dist/img/affinity-service5.png">
-                                <h2 class="title">Constantly Updating You <br> Every Month</h2>
+                                <h2 class="title">Constantly Updating <br> You Every Month</h2>
                             </div>
                         </div>
                     </div>
 
-                    <div class="service-wrap col-md-6">
+                    <div class="service-wrap col-lg-6 order-lg-5">
                         <div class="service service5">
                             <div class="overlay"></div>
                             <div class="content">
                                 <img src="dist/img/affinity-service1.png">
-                                <h2 class="title">Performance-Based Guarantee - Results Matter</h2>
+                                <h2 class="title">Performance-Based <br> Guarantee - Results Matter</h2>
                             </div>
                         </div>
                     </div>
 
-                    <div class="service-wrap col-md-6">
+                    <div class="service-wrap col-lg-6 order-lg-6">
                         <div class="service service6">
                             <div class="overlay"></div>
                             <div class="content">
@@ -201,7 +218,7 @@
             <div class="container-fluid">
                 <div class="row">
 
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="content-wrap">
                             <div class="content">
                                 <h2 class="title">"Marketing 101: Go <br> where the people are."</h2>
@@ -211,7 +228,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="graph-wrap">
                             <div class="graph"></div>
                         </div>
@@ -226,7 +243,7 @@
                 <div class="content">
                     <h2 class="title">See what the hype is all about.</h2>
                     <p class="lead">Take 15-minutes to get a full breakdown of where Google is flagging you.</p>
-                    <button class="btn btn-default">Get Started</button>
+                    <button class="break-btn btn btn-default">Get Started</button>
                 </div>
             </div>
         </section>
@@ -247,12 +264,16 @@
                                 <input type="text" name="business" class="col-12">
                             </div>
                             <div class="form-group">
-                                <label>Name</label>
-                                <input type="text" name="name" class="col-12">
-                            </div>
-                            <div class="form-group">
-                                <label>Phone</label>
-                                <input type="text" name="phone" class="col-12">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label>Name</label>
+                                        <input type="text" name="name" class="col-12">
+                                    </div>
+                                    <div class="col-6">
+                                        <label>Phone</label>
+                                        <input type="text" name="phone" class="col-12">
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label>Email</label>
@@ -288,7 +309,7 @@
                         <a href="https://www.instagram.com/affinity_ams/"><span class="fa fa-instagram"></span></a>
                     </li>
                 </ul>
-                <h4 class="disclaimer text-center"><span class="fa fa-copyright"></span> 2017 - All rights reserved</h4>
+                <h4 class="copy text-center"><span class="fa fa-copyright"></span> 2017 - All rights reserved</h4>
             </div>
 
         </footer>
